--- a/src/style.css
+++ b/src/style.css
@@ -3,19 +3,26 @@
 }
 
 .game-board {
-    width: 600px;
-    height: 600px;
-    background: purple;
+    width: 45vw;
+    height: 45vw;
+    background: #000;
     display: flex;
     justify-content: space-around;
     align-items: center;
     flex-wrap: wrap;
+    margin: 5em auto;
+    padding: 1.5em;
 }
 
 .game-board__position {
-    width: 25%;
-    height: 25%;
-    margin: 0 4.16%;
+    width: 32%;
+    height: 32%;
+    /* margin: 0 %; */
     border: 1px solid black;
-    background: green;
+    background: #fff;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    padding: 0.5em;
+    font-size: 2em;
 }
